--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ remote_theme: daattali/beautiful-jekyll@5.0.0
 
 navbar-links:
   Home: "/"
-  TPT Notes: "/cbnotes"
+  TPT Notes: "/cbnoteshome"
   Create Task: "/createtask"
   Python Project: "/python"
