--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,4 @@ navbar-links:
   TPT Notes: "/cbnoteshome"
   Create Task: "/createtask"
   Python Project: "/python"
+  Accounts and Logins: "/login"
